; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_GetEsIdVout.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_GetEsIdVout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_track_priv = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @vlc_player_GetEsIdVout(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.vlc_player_track_priv*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call %struct.vlc_player_track_priv* @vlc_player_GetPrivTrack(i32* %9, i32* %10)
  store %struct.vlc_player_track_priv* %11, %struct.vlc_player_track_priv** %8, align 8
  %12 = load %struct.vlc_player_track_priv*, %struct.vlc_player_track_priv** %8, align 8
  %13 = icmp ne %struct.vlc_player_track_priv* %12, null
  br i1 %13, label %14, label %26

14:                                               ; preds = %3
  %15 = load i32*, i32** %7, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load %struct.vlc_player_track_priv*, %struct.vlc_player_track_priv** %8, align 8
  %19 = getelementptr inbounds %struct.vlc_player_track_priv, %struct.vlc_player_track_priv* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load i32*, i32** %7, align 8
  store i32 %20, i32* %21, align 4
  br label %22

22:                                               ; preds = %17, %14
  %23 = load %struct.vlc_player_track_priv*, %struct.vlc_player_track_priv** %8, align 8
  %24 = getelementptr inbounds %struct.vlc_player_track_priv, %struct.vlc_player_track_priv* %23, i32 0, i32 1
  %25 = load i32*, i32** %24, align 8
  store i32* %25, i32** %4, align 8
  br label %27

26:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %27

27:                                               ; preds = %26, %22
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local %struct.vlc_player_track_priv* @vlc_player_GetPrivTrack(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
